[project]
name = "flux"
version = "0.1.0"
description = "Inference codebase for FLUX.2"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Black Forest Labs", email = "support@blackforestlabs.ai" }
]
license = { file = "LICENSE.md" }

dependencies = [
  "torch==2.10.0",
  "torchvision==0.25.0",
  "einops==0.8.1",
  "transformers==4.56.1",
  "safetensors==0.4.5",
  "fire==0.7.1",
  "openai==2.8.1",
  "accelerate==1.12.0",
  "datasets>=2.20.0",
  "Pillow>=10.0.0",
  "tensorboard>=2.14.0",
  "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.6.8",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true